images and links added

--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
 							<li><a href="generic.html">Generic</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -61,7 +57,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/spice.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://sinninga.github.io/spice" class="link">The Hot Tamale</a></h3>
@@ -70,7 +66,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/guitars.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://sinninga.github.io/ecommerce" class="link">Vintage Guitars</a></h3>
@@ -79,7 +75,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/glass.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://sinninga.github.io/glass-website" class="link">Ice Travel</a></h3>
@@ -88,7 +84,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/explore.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="https://sinninga.github.io/parallax-website" class="link">Explorer</a></h3>
@@ -165,9 +161,9 @@
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
+										<span class="icon brands alt fa-github"></span>
 										<h3>Github</h3>
-										<span>(000) 000-0000 x12387</span>
+										<a href=https://github.com/sinninga/ >https://github.com/sinninga</a></span>
 									</div>
 								</section>
 								<section>
