--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										<img src="images/explore.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://sinninga.github.io/parallax-website" class="link">Explorer</a></h3>
+										<h3><a href="https://sinninga.github.io/parallax-website" class="link">Explore</a></h3>
 										<p>Parallax Landing Page</p>
 									</header>
 								</article>
@@ -166,15 +166,7 @@
 										<a href=https://github.com/sinninga/ >https://github.com/sinninga</a></span>
 									</div>
 								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
+								<section></section>
 							</section>
 						</div>
 					</section>
@@ -182,13 +174,6 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
