--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">asinning25@gmail.com</a>
+										<span>asinning25@gmail.com</span>
 									</div>
 								</section>
 								<section>
