added explorer page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										<img src="images/spice.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://sinninga.github.io/spice" class="link">The Hot Tamale</a></h3>
+										<h3><a href="landing.html" class="link">The Hot Tamale</a></h3>
 										<p>Find Spicy Food Near You</p>
 									</header>
 								</article>
@@ -69,7 +69,7 @@
 										<img src="images/guitars.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://sinninga.github.io/ecommerce" class="link">Vintage Guitars</a></h3>
+										<h3><a href="generic.html" class="link">Vintage Guitars</a></h3>
 										<p>Your Dream Axe</p>
 									</header>
 								</article>
@@ -78,7 +78,7 @@
 										<img src="images/glass.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://sinninga.github.io/glass-website" class="link">Ice Travel</a></h3>
+										<h3><a href="elements.html" class="link">Ice Travel</a></h3>
 										<p>Sleek Travel Design</p>
 									</header>
 								</article>
@@ -87,7 +87,7 @@
 										<img src="images/explore.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://sinninga.github.io/parallax-website" class="link">Explore</a></h3>
+										<h3><a href="explore.html" class="link">Explore</a></h3>
 										<p>Parallax Landing Page</p>
 									</header>
 								</article>
