added pics and descriptions of projects

--- a/elements.html
+++ b/elements.html
@@ -121,7 +121,7 @@
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon brand alt fa-github"></span>
+										<span class="icon brands alt fa-github"></span>
 										<h3>Github</h3>
 										<a href="https://github.com/sinninga">https://github.com/sinninga</a>
 									</div>
