--- a/landing.html
+++ b/landing.html
@@ -44,12 +44,15 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Landing</h1>
+								<h1>The Hot Tamale</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
 								sed veroeros. tempus adipiscing nulla.</p>
 							</div>
+							<ul class="actions">
+								<li><a href="https://sinninga.github.io/spice" class="button">View Website</a></li>
+							</ul>
 						</div>
 					</section>
 
@@ -69,8 +72,8 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<a href="https://sinninga.github.io/spice" class="image">
+										<img src="images/spice.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -79,7 +82,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://github.com/sinninga/spice" class="button">View Code</a></li>
 											</ul>
 										</div>
 									</div>
@@ -121,7 +124,7 @@
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon brand alt fa-github"></span>
+										<span class="icon brands alt fa-github"></span>
 										<h3>Github</h3>
 										<a href="https://github.com/sinninga">https://github.com/sinninga</a>
 									</div>
