--- a/elements.html
+++ b/elements.html
@@ -44,12 +44,15 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Elements</h1>
+								<h1>Ice Travel</h1>
 							</header>
 							<div class="content">
 								<p>Lorem ipsum dolor sit amet nullam consequat<br />
 								sed veroeros. tempus adipiscing nulla.</p>
 							</div>
+							<ul class="actions">
+								<li><a href="https://sinninga.github.io/glass-website" class="button">View Website</a></li>
+							</ul>
 						</div>
 					</section>
 
@@ -70,7 +73,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="images/glass.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -79,7 +82,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://github.com/sinninga/glass-website" class="button">View Code</a></li>
 											</ul>
 										</div>
 									</div>
