--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">The Hot Tamale</a></li>
+							<li><a href="generic.html">Vintage Guitars</a></li>
+							<li><a href="elements.html">Ice Travel</a></li>
+							<li><a href="explore.html">Explore</a></li>
 						</ul>
 					</nav>
 
@@ -44,7 +45,7 @@
 							<div class="content">
 								<p>Web development with captivating user experiences, seamless functionality and responsive designs</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">My Projects</a></li>
 								</ul>
 							</div>
 						</div>
