--- a/landing.html
+++ b/landing.html
@@ -30,9 +30,10 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">The Hot Tamale</a></li>
+							<li><a href="generic.html">Vintage Guitars</a></li>
+							<li><a href="elements.html">Ice Travel</a></li>
+							<li><a href="explore.html">Explore</a></li>
 						</ul>
 					</nav>
 
