links made to open in new windows

--- a/generic.html
+++ b/generic.html
@@ -52,7 +52,7 @@
 								sed veroeros. tempus adipiscing nulla.</p>
 							</div>
 							<ul class="actions">
-								<li><a href="https://sinninga.github.io/ecommerce" class="button">View Website</a></li>
+								<li><a href="https://sinninga.github.io/ecommerce" target="_blank" class="button">View Website</a></li>
 							</ul>
 						</div>
 					</section>
@@ -73,7 +73,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://sinninga.github.io/ecommerce" class="image">
+									<a href="https://sinninga.github.io/ecommerce" target="_blank" class="image">
 										<img src="images/guitars.png" class="site-img" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -83,7 +83,7 @@
 											</header>
 											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="https://github.com/sinninga/ecommerce" class="button">View Code</a></li>
+												<li><a href="https://github.com/sinninga/ecommerce" target="_blank" class="button">View Code</a></li>
 											</ul>
 										</div>
 									</div>
@@ -127,7 +127,7 @@
 									<div class="contact-method">
 										<span class="icon brands alt fa-github"></span>
 										<h3>Github</h3>
-										<a href="https://github.com/sinninga">https://github.com/sinninga</a>
+										<a href="https://github.com/sinninga" target="_blank">https://github.com/sinninga</a>
 									</div>
 								</section>
 								<section>
