--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 									<div class="contact-method">
 										<span class="icon brands alt fa-github"></span>
 										<h3>Github</h3>
-										<a href=https://github.com/sinninga/ >https://github.com/sinninga</a></span>
+										<a href=https://github.com/sinninga/ target="_blank">https://github.com/sinninga</a></span>
 									</div>
 								</section>
 								<section></section>
