footer html changed

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>2023</li><li>Adam Sinning</li>
 							</ul>
 						</div>
 					</footer>
