added hot tamale description

--- a/landing.html
+++ b/landing.html
@@ -48,8 +48,7 @@
 								<h1>The Hot Tamale</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Discover a world of fiery flavors and find sizzling hotspots serving the spiciest culinary delights near you, conveniently displayed on an interactive map for your adventurous taste buds</p>
 							</div>
 							<ul class="actions">
 								<li><a href="https://sinninga.github.io/spice" target="_blank" class="button">View Website</a></li>
