vintage guitars description added

--- a/generic.html
+++ b/generic.html
@@ -48,8 +48,7 @@
 								<h1>Vintage Guitars</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Your gateway to timeless tones - explore our curated collection of vintage guitars, where every instrument has a story to tell and a melody to revive</p>
 							</div>
 							<ul class="actions">
 								<li><a href="https://sinninga.github.io/ecommerce" target="_blank" class="button">View Website</a></li>
