timeless tones name change

--- a/generic.html
+++ b/generic.html
@@ -45,10 +45,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Vintage Guitars</h1>
+								<h1>Timeless Tones</h1>
 							</header>
 							<div class="content">
-								<p>Your gateway to timeless tones - explore our curated collection of vintage guitars, where every instrument has a story to tell and a melody to revive</p>
+								<p>Your gateway to vintage vibes - explore our curated collection of retro electric guitars, where every instrument has a story to tell and a melody to revive</p>
 							</div>
 							<ul class="actions">
 								<li><a href="https://sinninga.github.io/ecommerce" target="_blank" class="button">View Website</a></li>
