--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">The Hot Tamale</a></h3>
-										<p>Find Spicy Food Near You</p>
+										<p>Discover Fiery Food Near You</p>
 									</header>
 								</article>
 								<article>
@@ -70,8 +70,8 @@
 										<img src="images/guitars.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="generic.html" class="link">Vintage Guitars</a></h3>
-										<p>Your Dream Axe</p>
+										<h3><a href="generic.html" class="link">Timeless Tones</a></h3>
+										<p>Revive the Retro Sounds</p>
 									</header>
 								</article>
 								<article>
