about me changed

--- a/elements.html
+++ b/elements.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Adam Sinning</strong> <span>Portfolio</span></a>
+						<a href="index.html" class="logo"><strong>Adam</strong> <span>Sinning</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,8 +31,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Vintage Guitars</a></li>
-							<li><a href="elements.html">Ice Travel</a></li>
+							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="elements.html">Icy Excursions</a></li>
 							<li><a href="explore.html">Explore</a></li>
 						</ul>
 					</nav>
@@ -45,11 +45,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Ice Travel</h1>
+								<h1>Icy Excursions</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Set your sights on the snowy slopes or seek refuge from the chill with this ice-cool design for your travel dashboard</p>
 							</div>
 							<ul class="actions">
 								<li><a href="https://sinninga.github.io/glass-website" target="_blank" class="button">View Website</a></li>
