--- a/explore.html
+++ b/explore.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Adam Sinning</strong> <span>Portfolio</span></a>
+						<a href="index.html" class="logo"><strong>Adam</strong> <span>Sinning</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,8 +31,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Vintage Guitars</a></li>
-							<li><a href="elements.html">Ice Travel</a></li>
+							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="elements.html">Icy Excursions</a></li>
 							<li><a href="explore.html">Explore</a></li>
 						</ul>
 					</nav>
