--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Adam Sinning</strong> <span>Portfolio</span></a>
+						<a href="index.html" class="logo"><strong>Adam</strong> <span>Sinning</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -30,8 +30,8 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Vintage Guitars</a></li>
-							<li><a href="elements.html">Ice Travel</a></li>
+							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="elements.html">Icy Excursions</a></li>
 							<li><a href="explore.html">Explore</a></li>
 						</ul>
 					</nav>
@@ -40,7 +40,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Adam</h1>
+								<h1>Hi, my name is Adam and I build what I want</h1>
 							</header>
 							<div class="content">
 								<p>Web development with captivating user experiences, seamless functionality and responsive designs</p>
@@ -79,8 +79,8 @@
 										<img src="images/glass.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="elements.html" class="link">Ice Travel</a></h3>
-										<p>Sleek Travel Design</p>
+										<h3><a href="elements.html" class="link">Icy Excursions</a></h3>
+										<p>Find your Frozen Fantasyland</p>
 									</header>
 								</article>
 								<article>
@@ -118,7 +118,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>I'm a full-stack developer from Loveland, Colorado, educated at the University of Colorado and LeWagon Coding Bootcamp. I specialize in crafting visually captivating websites using HTML, CSS, JavaScript, and React, while also integrating back-end functionalities through RESTful APIs and working with SQL/NoSQL databases like PostgreSQL and MongoDB. Beyond coding, I'm an avid guitar player, Spanish language learner, scuba diver, and spicy food enthusiast, blending my diverse interests into creating immersive web experiences.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
