--- a/explore.html
+++ b/explore.html
@@ -33,7 +33,7 @@
 							<li><a href="landing.html">The Hot Tamale</a></li>
 							<li><a href="generic.html">Timeless Tones</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explore</a></li>
+							<li><a href="explore.html">Explorology</a></li>
 						</ul>
 					</nav>
 
@@ -45,11 +45,10 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Explore</h1>
+								<h1>Explorology</h1>
 							</header>
 							<div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>Explore enchanting travel tales and embark on a visual journey with seamless animations and a unique parallax homepage</p>
 							</div>
 							<ul class="actions">
 								<li><a href="https://sinninga.github.io/parallax-website" target="_blank" class="button">View Website</a></li>
