--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<li><a href="landing.html">The Hot Tamale</a></li>
 							<li><a href="generic.html">Timeless Tones</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explore</a></li>
+							<li><a href="explore.html">Explorology</a></li>
 						</ul>
 					</nav>
 
@@ -88,8 +88,8 @@
 										<img src="images/explore.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="explore.html" class="link">Explore</a></h3>
-										<p>Parallax Landing Page</p>
+										<h3><a href="explore.html" class="link">Explorology</a></h3>
+										<p>Cherish the Moments that Matter</p>
 									</header>
 								</article>
 								<!-- <article>
