--- a/landing.html
+++ b/landing.html
@@ -33,7 +33,7 @@
 							<li><a href="landing.html">The Hot Tamale</a></li>
 							<li><a href="generic.html">Timeless Tones</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explore</a></li>
+							<li><a href="explore.html">Explorology</a></li>
 						</ul>
 					</nav>
 
