--- a/index.html
+++ b/index.html
@@ -167,7 +167,13 @@
 										<a href=https://github.com/sinninga/ target="_blank">https://github.com/sinninga</a></span>
 									</div>
 								</section>
-								<section></section>
+								<section>
+									<div class="contact-method">
+										<span class="icon brands alt fa-flickr"></span>
+										<h3>Flickr</h3>
+										<a href=https://flickr.com/asinning25/ target="_blank">https://flickr.com/asinning25</a></span>
+									</div>
+								</section>
 							</section>
 						</div>
 					</section>
