--- a/explore.html
+++ b/explore.html
@@ -130,6 +130,11 @@
 									</div>
 								</section>
 								<section>
+									<div class="contact-method">
+										<span class="icon brands alt fa-flickr"></span>
+										<h3>Flickr</h3>
+										<a href=https://flickr.com/asinning25/ target="_blank">https://flickr.com/asinning25</a></span>
+									</div>
 								</section>
 							</section>
 						</div>
