added description for the hot tamale

--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,7 @@
 								<h1>The Hot Tamale</h1>
 							</header>
 							<div class="content">
-								<p>Discover a world of fiery flavors and find sizzling hotspots serving the spiciest culinary delights near you, conveniently displayed on an interactive map for your adventurous taste buds</p>
+								<p>Discover a world of fiery flavors and reward your adventurous taste buds. Find sizzling hotspots serving the spiciest culinary delights near you, conveniently displayed on an interactive map</p>
 							</div>
 							<ul class="actions">
 								<li><a href="https://sinninga.github.io/spice" target="_blank" class="button">View Website</a></li>
@@ -73,14 +73,24 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="https://sinninga.github.io/spice" target="_blank" class="image">
-										<img src="images/spice.png" class="site-img" alt="" data-position="center center" />
+										<img src="images/spice.png" class="site-img2" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Description</h3>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="devicon" />
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="devicon"/>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												The Hot Tamale was born out of a desire to connect like-minded spice enthusiasts with their favorite flavors while also demonstrating my skills in front-end development, API integration, and creating user-friendly interfaces.
+												I use this app often in my hometown of Loveland, CO and have discovered my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. Try it yourself!
+											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/spice" target="_blank" class="button">View Code</a></li>
 											</ul>
